# WoWee

./: .dockerignore  .gitignore  BOT_PLAN.md  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  extract_assets.ps1  extract_assets.sh  mangos-helper.sudoers  vcpkg.json
.github/workflows/: build.yml  release.yml  security.yml
assets/shaders/: celestial.frag.glsl  celestial.frag.spv  character.frag.glsl  character.frag.spv  character.vert.spv  clouds.frag.glsl  clouds.frag.spv  footprint.frag.glsl  footprint.frag.spv  footprint.vert.glsl  footprint.vert.spv  fsr2_accumulate.comp.spv  fsr2_motion.comp.spv  fxaa.frag.glsl  fxaa.frag.spv  lens_flare.frag.glsl  lens_flare.frag.spv  m2.frag.glsl  m2.frag.spv  m2.vert.glsl  m2.vert.spv  m2_particle.frag.glsl  m2_particle.frag.spv  m2_particle.vert.glsl  m2_particle.vert.spv  minimap_display.frag.glsl  minimap_display.frag.spv  selection_circle.vert.glsl  selection_circle.vert.spv  terrain.frag.glsl  terrain.frag.spv  water.frag.spv  wmo.frag.glsl
cmake/: GitVersion.cmake
docs/: asset-pipeline-gui.md  macos-distribution.md  status.md
include/addons/: addon_manager.hpp
include/audio/: ambient_sound_manager.hpp  audio_coordinator.hpp  audio_engine.hpp  footstep_manager.hpp  mount_sound_manager.hpp  music_manager.hpp  npc_voice_manager.hpp  player_voice_manager.hpp  ui_sound_manager.hpp
include/auth/: auth_handler.hpp  auth_packets.hpp  integrity.hpp
include/core/: animation_callback_handler.hpp  appearance_composer.hpp  application.hpp  config_paths.hpp  crash_diagnostics.hpp  entity_spawner.hpp  thread_pool.hpp  transport_callback_handler.hpp  version.hpp.in  world_entry_callback_handler.hpp
include/game/: chat_handler.hpp  combat_handler.hpp  entity.hpp  entity_controller.hpp  faction_hostility.hpp  game_handler.hpp  game_utils.hpp  handler_types.hpp  inventory.hpp  inventory_handler.hpp  movement_handler.hpp  packet_parsers.hpp  protocol_constants.hpp  quest_handler.hpp  quest_progress.hpp  social_handler.hpp  spell_classification.hpp  spell_defines.hpp  spell_handler.hpp  spline_packet.hpp  transport_manager.hpp  transport_path_repository.hpp  update_field_table.hpp  warden_module.hpp  world_packets.hpp  zone_manager.hpp
include/network/: net_platform.hpp  world_socket.hpp
include/pipeline/: adt_loader.hpp  asset_manager.hpp  dbc_layout.hpp  m2_loader.hpp  wmo_loader.hpp  wowee_building.hpp
include/rendering/: animation_controller.hpp  camera_controller.hpp  celestial.hpp  character_preview.hpp  character_renderer.hpp  footprint_renderer.hpp  lighting_manager.hpp  m2_model_classifier.hpp  m2_renderer.hpp  m2_track_sampler.hpp  movement_limits.hpp  overlay_system.hpp  post_process_pipeline.hpp  render_constants.hpp  renderer.hpp  sky_system.hpp  spell_visual_system.hpp  terrain_manager.hpp  terrain_renderer.hpp  vk_frame_data.hpp  wmo_renderer.hpp  world_map.hpp
include/ui/: action_bar_panel.hpp  auth_screen.hpp  buff_bar_layout.hpp  character_create_screen.hpp  character_screen.hpp  chat_panel.hpp  combat_ui.hpp  game_screen.hpp  inventory_screen.hpp  selection_screen_layout.hpp  settings_panel.hpp  social_panel.hpp  spellbook_screen.hpp  ui_raid_icons.hpp  window_manager.hpp
src/: main.cpp
src/addons/: addon_manager.cpp  lua_engine.cpp  lua_inventory_api.cpp  lua_social_api.cpp  lua_system_api.cpp
src/audio/: activity_sound_manager.cpp  ambient_sound_manager.cpp  audio_coordinator.cpp  audio_engine.cpp  footstep_manager.cpp  mount_sound_manager.cpp  music_manager.cpp  npc_voice_manager.cpp  player_voice_manager.cpp  ui_sound_manager.cpp
src/auth/: auth_handler.cpp  auth_packets.cpp  integrity.cpp
src/core/: animation_callback_handler.cpp  appearance_composer.cpp  application.cpp  config_paths.cpp  crash_diagnostics.cpp  entity_spawn_callback_handler.cpp  entity_spawner.cpp  entity_spawner_player.cpp  entity_spawner_processing.cpp  logger.cpp  memory_monitor.cpp  npc_interaction_callback_handler.cpp  transport_callback_handler.cpp  ui_screen_callback_handler.cpp  window.cpp  world_entry_callback_handler.cpp  world_loader.cpp
src/game/: chat_handler.cpp  combat_handler.cpp  entity.cpp  entity_controller.cpp  expansion_profile.cpp  faction_hostility.cpp  game_handler.cpp  game_handler_callbacks.cpp  game_handler_packets.cpp  inventory.cpp  inventory_handler.cpp  movement_handler.cpp  opcode_table.cpp  packet_parsers_classic.cpp  packet_parsers_tbc.cpp  quest_handler.cpp  social_handler.cpp  spell_handler.cpp  spline_packet.cpp  transport_animator.cpp  transport_clock_sync.cpp  transport_manager.cpp  transport_path_repository.cpp  update_field_table.cpp  warden_memory.cpp  warden_module.cpp  world_packets.cpp  world_packets_economy.cpp  world_packets_entity.cpp  world_packets_social.cpp  world_packets_world.cpp  zone_manager.cpp
src/math/: spline.cpp
src/network/: world_socket.cpp
src/pipeline/: adt_loader.cpp  asset_manager.cpp  asset_manifest.cpp  dbc_layout.cpp  m2_loader.cpp  wdt_loader.cpp  wmo_loader.cpp
src/rendering/: animation_controller.cpp  camera_controller.cpp  celestial.cpp  character_preview.cpp  character_renderer.cpp  charge_effect.cpp  clouds.cpp  footprint_renderer.cpp  levelup_effect.cpp  lighting_manager.cpp  m2_model_classifier.cpp  m2_renderer.cpp  m2_renderer_instance.cpp  m2_renderer_internal.h  m2_renderer_particles.cpp  (+13 more)
tests/: CMakeLists.txt  test_activity_fsm.cpp  test_buff_bar_layout.cpp  test_combat_fsm.cpp  test_dbc_layouts.cpp  test_dbc_loader.cpp  test_entity.cpp  test_expansion_profile.cpp  test_inventory_sort.cpp  test_locomotion_fsm.cpp  test_m2_color_alpha.cpp  test_m2_footstep_events.cpp  test_m2_structs.cpp  test_mail_packets.cpp  test_movement_limits.cpp  test_opcode_table.cpp  test_quest_progress.cpp  test_quest_rewards.cpp  test_raid_target_packets.cpp  test_realm_list.cpp  test_spell_classification.cpp  test_spline.cpp  test_transport_components.cpp  test_transport_path_repo.cpp  test_use_item_packet.cpp  test_zone_ambience.cpp
tools/: asset_pipeline_gui.py  integration_test.py  start_supervisor.py  upscale_textures.py
(+121 files in other folders)
